#0000 Executor: Correction of deprecations